--- a/aplicativomapa/Main.storyboard
+++ b/aplicativomapa/Main.storyboard
@@ -62,7 +62,7 @@
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <segue destination="PST-Nu-ihc" kind="modal" modalTransitionStyle="flipHorizontal" id="B7v-MJ-uTo"/>
+                                            <segue destination="PST-Nu-ihc" kind="modal" id="B7v-MJ-uTo"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -287,7 +287,7 @@
                                         </state>
                                         <connections>
                                             <action selector="mudarConfiguracoes:" destination="PST-Nu-ihc" eventType="touchUpInside" id="aoE-po-9uR"/>
-                                            <segue destination="vXZ-lx-hvc" kind="modal" modalTransitionStyle="flipHorizontal" id="G9Z-Yi-7UQ"/>
+                                            <segue destination="cDF-L9-Q9B" kind="unwind" unwindAction="unwind:" id="wJh-wj-MMB"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -380,6 +380,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Iac-BO-E7t" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="cDF-L9-Q9B" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="522" y="42"/>
         </scene>
